Bug 537414 - Pasting clipboard content to OpenOffice Writer broken. r=roc.